styling the frontend, fixing bugs

--- a/ContactPro/wwwroot/css/site.css
+++ b/ContactPro/wwwroot/css/site.css
@@ -162,7 +162,7 @@ main {
 
 .footer {
     flex-shrink: 0;
-    background-color: var(--cf-secondaryColor);
+    background-color: var(--cf-primaryColorOffBlue);
 }
 
 .copyright {
