--- a/ContactPro/Views/Contacts/Details.cshtml
+++ b/ContactPro/Views/Contacts/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppUserId)
+            @Html.DisplayNameFor(model => model.AppUserID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AppUserId)
+            @Html.DisplayFor(model => model.AppUserID)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
