--- a/ContactPro/Views/Contacts/Edit.cshtml
+++ b/ContactPro/Views/Contacts/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <input asp-for="AppUserId" class="form-control" />
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
+                <label asp-for="AppUserID" class="control-label"></label>
+                <input asp-for="AppUserID" class="form-control" />
+                <span asp-validation-for="AppUserID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
