--- a/ContactPro/Views/Contacts/Index.cshtml
+++ b/ContactPro/Views/Contacts/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.AppUserId)
+                @Html.DisplayNameFor(model => model.AppUserID)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
@@ -61,7 +61,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.AppUserId)
+                @Html.DisplayFor(modelItem => item.AppUserID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
