--- a/ContactPro/Views/Shared/_LayoutLander.cshtml
+++ b/ContactPro/Views/Shared/_LayoutLander.cshtml
@@ -44,7 +44,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (SignInManager.IsSignedIn(User))
+                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
@@ -61,7 +61,7 @@
 
     </header>
     <main class="content" id="mainHero">
-        <section class="container h-100">
+        <section class="container-fluid  h-100">
             @RenderBody()
         </section>
     </main>
